# AVQ_Compression

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: clang.yaml  g++.yaml  tests.yaml
app/: main.cpp
app/analyzer/: main.cpp
app/avq/: main.cpp
inc/: arg_parser.hpp  arithmetic_coder.h  arithmetic_coder.hpp  block.hpp  decoder.hpp  dictionary.hpp  encoder.hpp  growing_point.hpp  header_tga.hpp  heuristics.hpp  input_reader.hpp  io_handler.hpp  output_writer.hpp  pixel.hpp  types.hpp
inc/analyzer/: stats.hpp
inc/types/: args.hpp  block.hpp  dict_deletion_handler.hpp  dict_entry.hpp  dict_list.hpp  dictionary.hpp  gp_pool.hpp  growing_point.hpp  header_tga.hpp  image.hpp  pixel.hpp
scripts/: config_clang.sh  config_gcc.sh
src/: arg_parser.cpp  arithmetic_coder.cpp  decoder.cpp  dictionary.cpp  encoder.cpp  growing_point.cpp  heuristics.cpp  input_reader.cpp  io_handler.cpp  output_writer.cpp  pixel.cpp
src/analyzer/: stats.cpp
src/types/: block.cpp  dict_deletion_handler.cpp  dict_list.cpp  dictionary.cpp  gp_pool.cpp  image.cpp
test/: main.cpp
test/inc/: test_common.hpp
test/results/: detailed(Sheet).csv  detailed_irregular_experiments.csv  gradient_experiments.csv  gradient_irregular_experiments.csv  random_experiments.csv  squares(Sheet).csv
test/src/: test_dict_list.cpp  test_dictionary.cpp  test_gp_pool.cpp  test_heuristics.cpp
